[package]
name = "git-tools"
version = "0.1.0"
edition = "2021"
authors = ["groveer <groveer@outlook.com>"]
description = "A Git tool that uses AI for merge conflict resolution"

[dependencies]
# Git operations
git2 = "0.20"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# OpenAI API client
openai-api = "0.1"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.15"

# Filesystem
dirs = "6.0"

# Testing
tempfile = "3"  # 用于测试的临时目录

[dev-dependencies]
mockito = "1.7.0"
